osh/src/HomePage.css
#home-page{
    height: 100%;
    width: 100%;
}
#header{
    border-bottom: 1px solid rgba(0,0,0,0.1);
    width: 100%;
    height: 10%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}
.header-content{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    position: relative;
}
#header-content-left{
    width: 20%;
    min-width: 150px;
   
}

.logo-container{
    max-width: 200px;
    min-width: 150px;
    display: flex;
    position: relative;
}
.logo{
    position: relative;
    max-width: 100%; 
    max-height: 100%; 
}


#header-content-middle{
    width: 50%;
}

#list-container{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}
#list{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    height: 100%;
}
.nav-item{
    display: flex;
    border-radius: 10px;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-right: 20px;
    
}
.nav-item:hover{
    transition: 1s;
    background-color: rgb(230, 230, 230);
}

